Fix sizes and heights in navbar, both collapsed and not.

--- a/src/components/Navigation/NavLink.scss
+++ b/src/components/Navigation/NavLink.scss
@@ -2,7 +2,6 @@
 
 .linkBase {
   text-decoration: none !important;
-  font-size: $font-size-xlarge;
 }
 
 .linkStudent {
