--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -15,13 +15,6 @@
   background-color: $color-blue-light !important;
 }
 
-.toggle-teacher {
-  border-color: $color-blue-dark !important;
-  .icon-bar {
-    background-color: $color-blue-dark !important;
-  }
-}
-
 .navbar-default {
   border-radius: 0;
   background-color: $color-green-light;
